<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boarding.Dashboardone">

    <ImageView
        android:id="@+id/iv_backgroundOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrounddashboardone"
        android:scaleType="centerInside"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_43sdp"
            android:background="@drawable/loocalelogolite"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"/>

        <TextView
            android:id="@+id/tv_boardingOneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boarding_one_title"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/loocale_primary"
            android:textSize="@dimen/_25ssp"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_7sdp"/>

        <TextView
            android:id="@+id/tv_boardingOneSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boarding_one_subtitle"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/loocale_primary"
            android:textSize="@dimen/_19ssp"
            android:includeFontPadding="false"/>

    </LinearLayout>

</RelativeLayout>