<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boarding.Dashboardthree">

    <ImageView
        android:id="@+id/iv_backgroundThree"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        android:background="@drawable/backgrounddashboardthree"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_43sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/loocalelogolite" />

        <TextView
            android:id="@+id/tv_boardingThreeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/boarding_three_title"
            android:textColor="@color/loocale_primary"
            android:textSize="@dimen/_25ssp" />

        <TextView
            android:id="@+id/tv_boardingThreeSubtitle"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/boarding_three_subtitle"
            android:textColor="@color/loocale_primary"
            android:textSize="@dimen/_19ssp" />

    </LinearLayout>

</RelativeLayout>